--- a/s24-cms-v2/build.xml
+++ b/s24-cms-v2/build.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0"?>
 <project name="build" default="prepare">
-    <!-- Base phing build.xml -->
+    <!-- Phing build.xml for S24 CMS v2 websites -->
+    <!-- Replace DOMAIN.COM with sites folder name -->
     
     <!-- Git repo to deploy site from -->
     <property name="repo" value="git@bitbucket.org:studio24/project-name.git" />
 	
     <!-- Email address to send live deploy logs to -->
-    <property name="email" value="email@studio24.net" />
+    <property name="email" value="simon@studio24.net" />
     
     <property name="base.path" value="."/>
     <property name="mode" value="staging" />
@@ -21,8 +22,20 @@
 	
     <!-- Any empty folders that need to be created go here -->
     <target name="create-folders" hidden="true">
-        <mkdir dir="${base.path}/shared/${mode}/web/assets/documents" />
-        <mkdir dir="${base.path}/shared/${mode}/data" />
+        <mkdir dir="${base.path}/shared/${mode}/sites/DOMAIN.COM/public/assets/library" />
+        <mkdir dir="${base.path}/shared/${mode}/data/sessions" />
+        <mkdir dir="${base.path}/shared/${mode}/data/logs" />
+        <mkdir dir="${base.path}/shared/${mode}/data/search" />
+        <mkdir dir="${release.path}/temp/cache/cms" />
+        <mkdir dir="${release.path}/temp/cache/cms/acl" />
+        <mkdir dir="${release.path}/temp/cache/cms/content" />
+        <mkdir dir="${release.path}/temp/cache/cms/nav" />
+        <mkdir dir="${release.path}/temp/cache/cms/role-permissions" />
+        <mkdir dir="${release.path}/temp/cache/cms/tokens" />
+        <mkdir dir="${release.path}/temp/cache/cms/urls" />
+        <mkdir dir="${release.path}/temp/cache/Acl" />
+        <mkdir dir="${release.path}/temp/cache/user" />
+        <mkdir dir="${release.path}/temp/cache/snippets" />
 		
         <!-- Set Apache writeable permissions -->
         <exec command="chown -R apache ${base.path}/shared" />
@@ -51,8 +64,8 @@
 		
         <echo>Adding symlinks to shared folders</echo>
         <symlink target="${base.path}/shared/staging/data" link="${release.path}/data" overwrite="true" />
-        <symlink target="${base.path}/shared/staging/web/assets/documents" link="${release.path}/web/assets/documents" overwrite="true" />
-	
+        <symlink target="${base.path}/shared/staging/sites/DOMAIN.COM/public/assets/library" link="${release.path}/sites/cambridgebs.co.uk/public/assets/library" overwrite="true" />
+		
         <echo>Running database updates</echo>
         <chmod file="${base.path}/phing/deployDB.sh" mode="0755" />
         <exec command="${base.path}/phing/deployDB.sh ${release.path} staging" checkreturn="true" />
@@ -72,10 +85,10 @@
         <gitlog repository="${release.path}" maxCount="1" noMerges="true" outputProperty="last.commit" />
         <phingcall target="create-folders" />
 		
-        <echo>Adding symlinks to shared folders</echo>		
+        <echo>Adding symlinks to shared folders</echo>
         <symlink target="${base.path}/shared/live/data" link="${release.path}/data" overwrite="true" />
-        <symlink target="${base.path}/shared/live/web/assets/documents" link="${release.path}/web/assets/documents" overwrite="true" />
-	
+        <symlink target="${base.path}/shared/live/sites/cambridgebs.co.uk/public/assets/library" link="${release.path}/sites/cambridgebs.co.uk/public/assets/library" overwrite="true" />
+			
         <echo>Enabling maintenance page</echo>
         <symlink target="${release.path}/maintenance" link="${base.path}/live" overwrite="true" />
 		
